Sorting UseCases by class for each case as LoadItem, LoadItemList, RemoveItem, SaveItemId. Changes in layout file with action button and InfoText.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">KotlinAppList</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="items_are_empty">Items are empty</string>
 </resources>
